save the project

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,10 @@ ul, ol {
     width: 90%;
     margin: auto;
 }
-}
+
 
 .form-control {
-    background-color: #F8D9CF;
+    background-color: #f8e4dd;
     border: none;
     margin: 5px;
     padding: 5px;
